Fixed some CSS Styles

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <div class="container clock-app">
+    <div class="container clock-app shadow">
         <h1>World Clock</h1>
 
-        <select class="form-select" aria-label="Default select example">
+        <select class="form-select">
             <option value="">Select a city..</option>
             <option value="">London</option>
             <option value="">New York</option>
@@ -25,12 +25,12 @@
         </select>
 
         <div class="row city-row">
-            <div class="col-6 col-city d-flex justify-content-start align-items-center">
+            <div class="col-6 col-city">
                 <h2>Los Angeles 🇺🇸</h2>
+                <div class="col-city-date">August 15th 2022</div>
             </div>
             <div class="col-6 col-time">
-                <div class="date">August 15th 2022</div>
-                <div class="time">1:48:15 AM</div>
+                <div class="col-city-time">1:48:15 AM</div>
             </div>
         </div>
 
