--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
 
         <select class="form-select">
             <option value="">Select a city..</option>
-            <option value="">London</option>
-            <option value="">New York</option>
-            <option value="">Auckland</option>
+            <option value="current">My current location</option>
+            <option value="los-angeles">Los Angeles</option>
+            <option value="london">London</option>
+            <option value="new-york">New York</option>
+            <option value="auckland">Auckland</option>
         </select>
 
-        <div class="row city-row">
+        <div id="city-row" class="row city-row">
             <div class="col-6 col-city">
-                <h2>Los Angeles 🇺🇸</h2>
-                <div class="col-city-date">August 15th 2022</div>
+                <h2 id="col-city-name" class="col-city-name"></h2>
+                <div id="col-city-date" class="col-city-date"></div>
             </div>
             <div class="col-6 col-time">
-                <div class="col-city-time">1:48:15 AM</div>
+                <div id="col-city-time" class="col-city-time"></div>
             </div>
         </div>
 
