--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div class="container clock-app shadow">
         <h1>World Clock</h1>
 
-        <select id="city-select" class="form-select">
-            <option value="">Select a city..</option>
+        <select id="city-select" class="form-select city-select">
+            <option selected disabled>Select a city..</option>
             <option value="current">My current location</option>
             <option value="America/Los_Angeles">Los Angeles</option>
             <option value="Europe/London">London</option>
-            <option value="America/Mazatlan">Cabo San Lucas</option>
+            <option value="America/Mazatlan">Mazatlán</option>
             <option value="Asia/Tokyo">Tokyo</option>
             <option value="Australia/Sydney">Sydney</option>
         </select>
